<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_regras"
            android:icon="@android:drawable/stat_notify_chat"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_creditos"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/menu_slideshow" />
    </group>
</menu>